		Joergen Nilsson.
20190606	Changing PCI device nr from 9 to 10 for the PIIX4 controller
		in the Malta emulation mode, to match a real dmesg from
		NetBSD/malta.
		Fixing disassembly of the MIPS TGEI, TGEIU, TLTI, TLTIU, TEQI,
		and TNEI instructions (NetBSD's pkgsrc patch had it wrong!).
		Implementing the MIPS TGEI, TGEIU, TLTI, TLTIU, TEQI, and TNEI
		instructions (but have not really tested them).
		Updating NetBSD/evbmips (Malta) installation instructions from
		7.1.2 to 8.0 (which needs the tgeiu instruction to boot).
		Fixing pmax bootpath bug (thanks for Andreas Gustafsson for 
		figuring out what the problem was).
20190610	Adding a memory range (ROM) dumping tool for HP 700/RX to the
		experiments directory.
20190611	Expanding the MIPS lw/sw 2-, 3-, and 4-instruction combinations
		(when loading/storing using the same base register) so that
		they are used also when emulating 64-bit CPUs such as the
		R4400. (Note: still lw/sw, i.e. 32-bit loads and stores, NOT
		ld/sd.)  Also stretching it to 5-instruction-sequences.
20190614	Adding __builtin_expect (likely/unlikely) detection to the
		configure script.

==============  RELEASE 0.6.2  ==============

20190626	Rounding up disk image sizes to full cylinders; fixes a bug
		where guest OSes could fail to read the end of e.g. a .tar.gz
		file supplied as a disk image on the command line.
20201006	Applying a rather large patch from Jason Thorpe for using
		/dev/tap devices in addition to the existing networking modes.
		The patch also consists of enhancements to the DEC21143 and
		Lance ethernet devices to perform packet filtering.
20201015	Adding support for masks for memory mapped components in the
		new framework. Used so far by the HP 700/RX, which has 2 MB
		RAM repeated throughout 0x30000000..0x3fffffff.
20201101	bootblock.cc now parses SGI disk boot blocks, and tries to
		load the OSLoader (sash), if booting without an explicitly
		provided OS kernel.